# mintupgrade

./: CMakeLists.txt  README.md
resources/: app.rc  resource.h
src/: Config.h  Context.h  Strings.h  Theme.h  Wizard.cpp  Wizard.h  main.cpp
src/core/: AppCompat.cpp  AppCompat.h  BcdBoot.cpp  BcdBoot.h  Downloader.cpp  Downloader.h  EditionSelector.cpp  EditionSelector.h  EspSetup.cpp  EspSetup.h  Installer.cpp  Installer.h  IsoMount.cpp  IsoMount.h  Log.cpp  Log.h  Sha256.cpp  Sha256.h  SystemInfo.cpp  SystemInfo.h  Util.cpp  Util.h  VersionCheck.cpp  VersionCheck.h
src/ui/: Image.cpp  Image.h  Ui.cpp  Ui.h
